--- a/estilos/estilo.css
+++ b/estilos/estilo.css
@@ -20,6 +20,10 @@ a {
   color: white;
 }
 
+a:hover {
+  color: #b5a3af;
+}
+
 li {
   list-style-type: none;
 }
@@ -32,7 +36,7 @@ li {
 }
 
 .pad10 {
-  padding: 10px;
+  padding: 15px;
 }
 
 /*INDEX*/
@@ -80,17 +84,17 @@ li {
   }
 
   .avion {
-    width: 80%;
+    width: 50%;
     position: sticky;
   }
 
   .estadia {
-    width: 80%;
+    width: 50%;
     position: sticky;
   }
 
   .covid {
-    width: 90%;
+    width: 50%;
     position: sticky;
   }
 
@@ -276,9 +280,16 @@ li {
   border: double #d6d6d6;
   width: 150px;
   height: 50px;
+  display: flex;
+  justify-content: center;
   display: inline-block;
 }
-
+.consejos:hover {
+  font-size: 20px;
+  width: 200px;  
+  height: 100px;
+  display: inline-block;
+}
 .contenedorConsejos {
   padding: auto;
   margin: auto;
@@ -306,6 +317,7 @@ li {
   padding: 10%;
   margin: 15%;
 }
+
 .contenedorFooter {
   grid-area: footer;
 }
